--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ idna==3.3
 mypy-extensions==0.4.3
 oauthlib==3.1.1
 pathspec==0.9.0
+Pillow==9.0.0
 platformdirs==2.4.1
 psycopg2-binary==2.9.3
 pycparser==2.21
